feat(auth/password-reset): add forgot password flow with email reset link
- Added  API route, controller, and service
- Implemented email sending with Nodemailer using Gmail App Password
- Added reset token fields to Prisma User model and ran migration
- Created mail utility in
- Linked forgot password page from signin page
- Updated  with required email credentials
- Installed  and

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",                  
+    "build": "next build",
     "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint"
@@ -16,6 +16,7 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
@@ -24,7 +25,9 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
