--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NEXTAUTH_SECRET=your-nextauth-secret
 NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+EMAIL_USER=gmail-address
+GOOGLE_APP_PASSWORD=16-char-App-Password #no spaces in password
