fix: add env variable for emailing #81

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-EMAIL_USER=gmail-address
-GOOGLE_APP_PASSWORD=16-char-App-Password #no spaces in password
+EMAIL_USER=your-email@gmail.com
+GOOGLE_APP_PASSWORD=your-password
