feat(register): add live password validation and real-time matching UX
- Added  utility using regex + zxcvbn for password strength scoring
- Implemented real-time validation for password and confirm-password fields
- Displayed helper messages and errors on blur/focus to guide user input
- Used  to clear errors once password is strong and matches confirmation
- Improved UX with immediate feedback instead of waiting for form submission
- Minor styling updates across related form components

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.10.1",
