--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/addon-a11y": "^9.0.18",
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-vitest": "^9.0.18",
+    "@storybook/nextjs-vite": "^9.0.18",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
@@ -44,18 +45,17 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "@types/zxcvbn": "^4.4.5",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-storybook": "^9.0.18",
+    "playwright": "^1.54.1",
     "prisma": "^6.10.1",
     "storybook": "^9.0.18",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^9.0.18",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.54.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
